# axon

./: -  .dockerignore  .gitignore  AXON_STATE_AND_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_ROADMAP.md  README.md  axon.toml  axon_design_approach_comparison.html  axon_design_options_brainstorm.html  axon_language.md  axon_model_output_comparison.html  axon_spec_v0.1.md  axon_task_01_parser_tools.md  axon_task_02_parser_agents.md  axon_task_03_codegen_mcp.md  docker-compose.yml  index.html  phase_0_completion_checklist.html  playground.css  playground.js  pyproject.toml
.githooks/: pre-commit
.github/: pull_request_template.md
axon-parser/: Cargo.toml  README.md  demo.html  index.d.ts  netlify.toml  package.json  pyproject.toml
axon-parser/playground/: index.html  playground.css  playground.js
axon-parser/src/: bench.rs  codegen.rs  evaluator.rs  expression.rs  fuzz.rs  ir_compiler.rs  lib.rs  main.rs  type_checker.rs  validator.rs
axon-parser/tests/: node_test.js
docs/: AGENTOPS_MESH_INTEGRATION.md  API_REFERENCE.md  ARCHITECTURE.md  CI.md  CLI_REFERENCE.md  CONTRIBUTING.md  COOKBOOK.md  EXPRESSION_PARSER.md  FOUNDATION_AUDIT.md  HANDOFF.md  HYGIENE.md  LANGUAGE_SPEC.md  PRECOMMIT.md  RELEASE_ARTIFACTS.md  RELEASE_ARTIFACTS_CONSISTENCY.md  RELEASE_BUNDLE.md  ROADMAP.md  RUNTIME_BOUNDARY.md  RUNTIME_EXECUTION_GUIDE.md  RUNTIME_GOVERNANCE.md  RUNTIME_GOVERNANCE_EVIDENCE.md  RUNTIME_PLAN.md  RUNTIME_PLAN_REVIEW.md  RUNTIME_PLAN_REVIEW_CONSISTENCY.md  RUNTIME_RFC_TEMPLATE.md  TASK_TICKET_TEMPLATE.md  TYPE_SYSTEM_GUIDE.md  index.html  product_pitch.md
examples/: README.md  code_review.ax  content_summarizer.ax  customer_support.ax  customer_support.axonir  data_analysis.ax  data_query.ax  debate.ax  flow.ax  github_triage.ax  governance_bridge_demo.py  hello.ax  hello.axonir  hello_run.ax  hello_run.axonir  invoice_extraction.ax  meeting_notes.ax  monitoring_alerts.ax  multi_agent_memory.ax  multi_agent_memory.axonir  prompts.ax  rag.ax  research_pipeline.ax  run_demos.py  sample_trace.jsonl  trace_preview.ax  types.ax
k8s/: axon-configmap.yaml  axon-deployment.yaml  axon-ingress.yaml  axon-secret.yaml  axon-service.yaml
pkg/: axon_parser.d.ts  axon_parser.js  axon_parser_bg.wasm  axon_parser_bg.wasm.d.ts
scripts/: generate_demo_output.py  generate_hero_gif.py  generate_hero_gif.sh  generate_hero_gif_powershell.ps1
tests/: benchmark_all.py  benchmark_parser.py  fake_openai_server.py  gen_stress_axon.py  test_act.py  test_agent_lifecycle.py  test_agent_supervisor.py  test_anthropic_provider.py  test_api_server.py  test_assignment.py  test_ast_snapshot.py  test_async_provider.py  test_async_runtime.py  test_benchmarks.py  test_check_project.py  test_cli.py  (+112 more)
(+257 files in other folders)
