[package]
name = "axon-parser"
version = "0.1.0"
edition = "2021"
authors = ["AXON Runtime Team"]
description = "AXON language parser — .ax source to portable IR JSON"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"], optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]
python = ["pyo3"]

[[bin]]
name = "axon-parser"
path = "src/main.rs"

[lib]
name = "axon_parser"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
