[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "axon-parser"
version = "0.1.0"
description = "AXON language parser — .ax source to portable IR JSON"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Compilers",
]

[tool.maturin]
features = ["python"]
module-name = "axon_parser"
manifest-path = "Cargo.toml"
